<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout


    android:layout_height="match_parent"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_alignParentBottom="true"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/getLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/getLat"
        android:layout_marginTop="89dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/getLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="147dp"
        android:layout_marginTop="115dp" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="13dp"
        android:text="@string/btn_return" />

    <Button
        android:id="@+id/btn_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/getLon"
        android:layout_alignStart="@+id/btn_home"
        android:text="@string/btn_nav" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_home"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_urcar"
        android:textSize="24sp" />


</RelativeLayout>
