<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HERE IS YOUR CAR"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/camPreview"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/floor_num"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displayFloor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_num"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displayPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sector_letter"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displaySector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                tools:layout_editor_absoluteX="189dp"

                tools:layout_editor_absoluteY="374dp" />

            <ImageButton
                android:id="@+id/readButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_media_play" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>